Moved function script to home page. Fixed image overflow issue in blog page.

--- a/EmbunLuxuryVillas/wwwroot/css/site.scss
+++ b/EmbunLuxuryVillas/wwwroot/css/site.scss
@@ -823,3 +823,7 @@ $secondary-theme-color: #5A920B;
     }
 }
 /*#endregion*/
+
+.entry-content img {
+    max-width: 100% !important;
+}
